syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc LoginUser (LoginRequest) returns (UserResponse);
  rpc GetUserById (UserIdRequest) returns (UserResponse);
  rpc updateUser (UpdateUserRequest) returns (UserResponse);
  rpc deleteUser (UserIdRequest) returns (DeleteUserResponse);
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}
message UpdateUserRequest {
  string user_id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message DeleteUserResponse {
  string message = 1;
}

message UserIdRequest {
  string user_id = 1;
}

message UserResponse {
  string user_id = 1;
  string name = 2;
  string email = 3;
}
